objects/Speaker__c.object
<CustomObject>
    <description>This object is for speakers</description>
    <fields>
        <fullName>Company__c</fullName>
        <description>This is the name of the company of the speaker.</description>
        <inlineHelpText>This is the name of the company of the speaker.</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This email will be use to contact the speaker.</description>
        <inlineHelpText>This email will be use to contact the speaker.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>This phone number will be use to contact the speaker.</description>
        <inlineHelpText>This phone number will be use to contact the speaker.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>